[package]
name = "speedy2d"
version = "2.1.0"
authors = ["QuantumBadger <speedy2d@redreader.org>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
description = """
Hardware-accelerated drawing of shapes, images, and text, with an easy to use
API. Speedy2D aims to be the simplest Rust API for creating a window, rendering graphics,
and handling input.
"""
keywords = ["opengl", "gamedev", "graphics", "font"]
categories = ["rendering::graphics-api", "game-development", "graphics"]
repository = "https://github.com/QuantumBadger/Speedy2D"
documentation = "https://docs.rs/speedy2d"

[features]
default = ["windowing", "image-loading"]
windowing = []
image-loading = ["image"]

[dependencies]
slotmap = "1.0"
glam = {version = "0.21", features = ["scalar-math"] }
log = "0.4"
backtrace = "0.3"
fontdue = "0.7"
#unicode-normalization = "0.1"
num-traits = "0.2"
earcutr = "0.2.0"
smallvec = "1.9.0"
miniquad = "0.4.0"

# For image_loading feature
image = { version = "0.23", optional = true }

# Tests using a headless GL context.

[[test]]
name = "test"
path = "test/main.rs"
harness = false

[dev-dependencies]
simple_logger = { version = "1.11", default-features = false, features = ["colors"] }
image = { version = "0.23" }

# Examples: must be listed manually as they require the "windowing" feature.

[[example]]
name = "hello_world"
required-features = ["windowing"]

[[example]]
name = "managing_context"
required-features = ["windowing"]

[[example]]
name = "user_events"
required-features = ["windowing"]

[[example]]
name = "input_callbacks"
required-features = ["windowing"]

[[example]]
name = "animation"
required-features = ["windowing"]

[[example]]
name = "load_image"
required-features = ["windowing", "image-loading"]

[[example]]
name = "mouse_grab"
required-features = ["windowing"]

[[example]]
name = "moving_text"
required-features = ["windowing"]

[workspace]
members = [
    "examples/webgl",
]
